# fitness

./: .gitignore  CMakeLists.txt  README.md  __init__.py  package.json
configs/: logging.cfg  settings.json
python/: __init__.py  bodyWeight.py  bodyWeightUI.py  fitnessDbUtils.py  interactive  logging.cfg  mySqlUtils.py
python/database/: db_tables.sql  db_tables.txt  db_utils.py  fitnessDb.py
python/database/records/: weigh_in.json
python/fitness/: __init__.py  bodyweight.py  skulpt.py
python/fitness/main/: bodyweight.py  conversions.py  if_else.cpp  mesocycle.py  program.py  skulpt.py  workout.py
python/fitness/main/database/: database.py
python/fitness/main/ui/: body_weight_ui.py
python/fitness/management/: db_utils.py  logging.cfg
python/fitness/resources/: __init__.py
python/fitness/resources/caches/: skulpt.csv
python/fitness/resources/configs/: db_tables.sql  google_credentials.json
python/fitness/ui/: bodyweight_ui.py  weighin_ui.py
python/main/: body_weight.py  skulpt.py
python/main/ui/: bodyWeightUI.py  body_weight_ui.py
python/management/: db_utils.py
python/resources/: __init__.py  fitness_config.json  skulpt.csv  weight_log_template.html  weight_log_template.txt
python/resources/configs/: fitness_config.json
python/temp/: interactive.py
resources/caches/: skulpt.csv
resources/configs/: settings.json
resources/templates/: weight_log.html
templates/: weight_log.txt
